# c-fileserver

./: .gitignore  CMakeLists.txt  Makefile  README.md  run.sh
src/: FilePresenter.c  FilePresenter.h  client.c  file.c  file.h  get_ip.c  get_ip.h  http.c  http.h  main.c  response.c  response.h  response_demo.c  rio.c  rio.h  server.c  server.h  ssl.c  ssl.h  tools.c  tools.h  url_parser.c  url_parser.h
src/fileManager/: FileManager.c  FileManager.h  example.c  utility.c  utility.h
